WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
214055
[JSC] Fix btjs by recovering CallFrame::describeFrame
https://bugs.webkit.org/show_bug.cgi?id=214055
Summary
[JSC] Fix btjs by recovering CallFrame::describeFrame
Yusuke Suzuki
Reported
2020-07-07 13:25:09 PDT
[JSC] Fix btjs by recovering CallFrame::describeFrame
Attachments
Patch
(2.53 KB, patch)
2020-07-07 13:27 PDT
,
Yusuke Suzuki
mark.lam
: review+
Details
Formatted Diff
Diff
Patch
(2.55 KB, patch)
2020-07-07 13:33 PDT
,
Yusuke Suzuki
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Yusuke Suzuki
Comment 1
2020-07-07 13:27:07 PDT
Created
attachment 403716
[details]
Patch
Mark Lam
Comment 2
2020-07-07 13:29:11 PDT
Comment on
attachment 403716
[details]
Patch rs=me
Yusuke Suzuki
Comment 3
2020-07-07 13:30:40 PDT
I'll fix build failure by adding `static_cast<char*>` to malloc result (void*).
Yusuke Suzuki
Comment 4
2020-07-07 13:33:44 PDT
Created
attachment 403719
[details]
Patch
EWS
Comment 5
2020-07-07 17:59:16 PDT
Committed
r264051
: <
https://trac.webkit.org/changeset/264051
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 403719
[details]
.
Radar WebKit Bug Importer
Comment 6
2020-07-07 18:00:21 PDT
<
rdar://problem/65202133
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug